@@ -1,26 +1,38 @@
 package com.basketball.league.service;
 
-import org.springframework.security.core.userdetails.User;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import com.basketball.league.model.User;
+import com.basketball.league.model.UserRepository;
+
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
 
+    @Autowired
+    private UserRepository userRepository;
+
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        // Replace with actual database calls
-        if ("user".equals(username)) {
-            return new User("user", new BCryptPasswordEncoder().encode("password"), Collections.emptyList());
-        } else if ("admin".equals(username)) {
-            return new User("admin", new BCryptPasswordEncoder().encode("password"), Collections.singleton(() -> "ROLE_ADMIN"));
-        } else {
-            throw new UsernameNotFoundException("User not found: " + username);
-        }
+        // Fetch the user from your repository
+        User user = userRepository.findByUsername(username)
+                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+
+        // Map role to GrantedAuthority
+        List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority(user.getRole()));
+
+        // Return a Spring Security User object
+        return new org.springframework.security.core.userdetails.User(
+                user.getUsername(),
+                user.getPassword(),
+                authorities
+        );
     }
 }
